fixed some error, added spacing.

--- a/css/components/example.css
+++ b/css/components/example.css
@@ -30,7 +30,7 @@
   background: var(--clr-background);
 }
 
-.example__content p {
+.container--example p {
   font-size: 1rem;
   letter-spacing: 1px;
   line-height: 1.5;
